--- a/UCS.ipynb
+++ b/UCS.ipynb
@@ -1,75 +1,65 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Trabalho_1.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Integrantes"
-      ],
       "metadata": {
         "id": "uwpGDcgm3YWp"
-      }
+      },
+      "source": [
+        "# Integrantes"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "uL-o1A7U3bT6"
+      },
+      "outputs": [],
       "source": [
         "# Guilherme Marques Brait Garros - 19264266\n",
         "# Lucas Grass Beraldo - 19246925\n",
         "# Renato Barba dos Santos - 19246529\n",
         "# Vitor Ferrara Conti - 19019454"
-      ],
-      "metadata": {
-        "id": "uL-o1A7U3bT6"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Imports"
-      ],
       "metadata": {
         "id": "WOtG7HmKPhRK"
-      }
+      },
+      "source": [
+        "# Imports"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "nPRs0xFRjZ70"
       },
       "outputs": [],
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import numpy as np"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Inicialização"
-      ],
       "metadata": {
         "id": "ErFL-0f8t5FH"
-      }
+      },
+      "source": [
+        "# Inicialização"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "70vwFq6tnXY8"
+      },
+      "outputs": [],
       "source": [
         "# names=range(x) | x = número de colunas\n",
         "# É necessário utilizar esse parâmetro, por que no arquivo csv tem linhas com números diferentes de colunas\n",
@@ -83,24 +73,24 @@
         "# str(x) + ':' + str(y) -> e.g. x = 0, y = 0 -> '0:0' (posicao_x : posicao_y)\n",
         "src = str(df[0][0]) + ':' + str(df[1][0])\n",
         "dest = str(df[0][1]) + ':' + str(df[1][1])"
-      ],
-      "metadata": {
-        "id": "70vwFq6tnXY8"
-      },
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Como vamos ler a matriz do arquivo CSV"
-      ],
       "metadata": {
         "id": "n3776TV-hdZp"
-      }
+      },
+      "source": [
+        "# Como vamos ler a matriz do arquivo CSV"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "fWzgWrkcjyuJ"
+      },
+      "outputs": [],
       "source": [
         "matriz = []\n",
         "\n",
@@ -125,41 +115,24 @@
         "# matriz[i][j] i = column | j = row\n",
         "# matriz depois do transpose\n",
         "# matriz[i][j] i = row | j = column"
-      ],
-      "metadata": {
-        "id": "fWzgWrkcjyuJ",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 234
-        },
-        "outputId": "73e2e059-dc59-4600-ea70-be051a02f372"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-a4ede5c8220e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# a matriz foi convertida para um array numpy para poder utilizar o metódo transpose para as colunas virarem linhas\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m# e vice-versa e depois foi convertido de volta para uma list para manter o padrão de utilização de lists\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mmatriz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatriz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0mmatriz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmatriz\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0mmatriz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmatriz\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Como vamos pegar o peso de cada posição"
-      ],
       "metadata": {
         "id": "wr4xl8mbiSPI"
-      }
+      },
+      "source": [
+        "# Como vamos pegar o peso de cada posição"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "t6UP5Bu3hcwA"
+      },
+      "outputs": [],
       "source": [
         "weight = []\n",
         "\n",
@@ -176,24 +149,24 @@
         "    elif(matriz[i][j] == 4):\n",
         "      row.append(15)\n",
         "  weight.append(row)"
-      ],
-      "metadata": {
-        "id": "t6UP5Bu3hcwA"
-      },
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Gerar um Grafo Direcionado"
-      ],
       "metadata": {
         "id": "CiZTm6wq6kCK"
-      }
+      },
+      "source": [
+        "# Gerar um Grafo Direcionado"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "id": "g-VAZDcz7xCA"
+      },
+      "outputs": [],
       "source": [
         "def generateDirectedGraph(graph, weight, x, y):\n",
         "    u = str(x) + ':' + str(y)\n",
@@ -293,15 +266,15 @@
         "        graph[u][v] = weight[x][y - 1] # Oeste\n",
         "\n",
         "    return graph"
-      ],
-      "metadata": {
-        "id": "g-VAZDcz7xCA"
-      },
-      "execution_count": 7,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "hxNdQyZoAmdh"
+      },
+      "outputs": [],
       "source": [
         "# foi preciso usar o defaultdict para usar váriaveis como chave de um dicionário\n",
         "from collections import defaultdict\n",
@@ -310,24 +283,24 @@
         "for i in range(df_length):\n",
         "  for j in range(df_length):\n",
         "    graph = generateDirectedGraph(graph, weight, i, j)"
-      ],
-      "metadata": {
-        "id": "hxNdQyZoAmdh"
-      },
-      "execution_count": 8,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Dijkstra para mostrar o caminho mais curto"
-      ],
       "metadata": {
         "id": "yLEVsvrxPO2q"
-      }
+      },
+      "source": [
+        "# Dijkstra para mostrar o caminho mais curto"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "kbrzgDgsmMPF"
+      },
+      "outputs": [],
       "source": [
         "def dijkstra(graph, src):\n",
         "    # cria uma fila com a posição atual\n",
@@ -356,24 +329,24 @@
         "                predecessor[neighbor] = currentNode\n",
         "\n",
         "    return minDistances, predecessor"
-      ],
-      "metadata": {
-        "id": "kbrzgDgsmMPF"
-      },
-      "execution_count": 9,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Uniform Cost Search"
-      ],
       "metadata": {
         "id": "vB_-2fV8PW-c"
-      }
+      },
+      "source": [
+        "# Uniform Cost Search"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {
+        "id": "pzYIKog2orRR"
+      },
+      "outputs": [],
       "source": [
         "def UCS(graph, src, dest):\n",
         "    minDistances, predecessor = dijkstra(graph, src)\n",
@@ -390,45 +363,54 @@
         "    if dest in minDistances and minDistances[dest] != float(\"inf\"):\n",
         "        print('O menor caminho entre '+ src + ' e ' + dest + ' é '  + str(minDistances[dest]))\n",
         "        print('E o caminho é ' + str(path))"
-      ],
-      "metadata": {
-        "id": "pzYIKog2orRR"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Executando o algoritmo"
-      ],
       "metadata": {
         "id": "8Jcbm9SMcpTm"
-      }
+      },
+      "source": [
+        "# Executando o algoritmo"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "UCS(graph, src, dest)"
-      ],
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OuKqekIM-geA",
-        "outputId": "1f463dce-8bcb-4607-9e10-a324b7698f6d"
+        "outputId": "dca2fe3a-2de3-46f0-f767-5fe5faecc7b4"
       },
-      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "O menor caminho entre 0:0 e 1:6 é 15\n",
-            "E o caminho é ['0:0', '1:0', '1:1', '1:2', '1:3', '1:4', '1:5', '1:6']\n"
+            "O menor caminho entre 0:0 e 1:6 é 7\n",
+            "E o caminho é ['0:0', '0:1', '0:2', '0:3', '0:4', '0:5', '0:6', '1:6']\n"
           ]
         }
+      ],
+      "source": [
+        "UCS(graph, src, dest)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
